unpackaged/main/default/objects/DonorApi__Gift_Credit__c/DonorApi__Gift_Credit__c.object-meta.xml
<CustomObject>
    <description>Summary of gifts</description>
    <label>Gift Credit</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Gift Credit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gift Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>