unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Account__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account (organization or household) receiving credit for the gift.</description>
    <inlineHelpText>The account (organization or household) receiving credit for the gift.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gift Credits</relationshipLabel>
    <relationshipName>Gift_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>