unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Assignee__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Assignee__c</fullName>
    <description>**System Calculated** Link to the gift credit assignee record.</description>
    <formula>IF(ISPICKVAL(DonorApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; DonorApi__Account__r.Id, DonorApi__Account__r.Name), IF(ISPICKVAL(DonorApi__Entity__c,&quot;Contact&quot;),HYPERLINK(&quot;/&quot; &amp; DonorApi__Contact__r.Id, DonorApi__Contact__r.FirstName &amp; &quot; &quot; &amp; DonorApi__Contact__r.LastName),HYPERLINK(&quot;/&quot; &amp; DonorApi__User__r.Id, DonorApi__User__r.FirstName &amp; &quot; &quot; &amp; DonorApi__User__r.LastName)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Link to the gift credit assignee record.</inlineHelpText>
    <label>Assignee</label>
    <type>Text</type>
</CustomField>