unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact (individual person) receiving credit for the gift.</description>
    <inlineHelpText>The contact (individual person) receiving credit for the gift.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gift Credits</relationshipLabel>
    <relationshipName>Gift_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>