unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Credit_Amount__c</fullName>
    <description>**Required** The amount of the gift credit.</description>
    <inlineHelpText>**Required** The amount of the gift credit.</inlineHelpText>
    <label>Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>