unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Credit_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Credit_Sub_Type__c</fullName>
    <description>Select the credit sub type that describes the gift credit (if applicable). This determines the detailed type of gift credit the constituent receives.</description>
    <inlineHelpText>Select the credit sub type that describes the gift credit (if applicable). This determines the detailed type of gift credit the constituent receives.</inlineHelpText>
    <label>Credit Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DonorApi__Credit_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Business Owner</fullName>
            </value>
            <value>
                <fullName>Donor-Advised Giving</fullName>
            </value>
            <value>
                <fullName>General Soft Credit</fullName>
            </value>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Workplace Giving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>