unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Credit_Type__c</fullName>
    <description>The type of credit assigned to the entity on the gift credit record. The standard types are hard, soft, and solicitor credit.</description>
    <inlineHelpText>The type of credit assigned to the entity on the gift credit record. The standard types are hard, soft, and solicitor credit.</inlineHelpText>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Soft Credit</fullName>
            </value>
            <value>
                <fullName>Solicitation Credit</fullName>
            </value>
            <value>
                <fullName>Hard Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>