unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>**Required** The date the constituent receives credit for the gift. This is typically the date the gift payment is processed.</description>
    <inlineHelpText>**Required** The date the constituent receives credit for the gift. This is typically the date the gift payment is processed.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>