unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Entity__c</fullName>
    <description>The entity to be given credit for the gift. Valid values are &quot;User&quot;, &quot;Account&quot;, or &quot;Contact&quot;.</description>
    <inlineHelpText>The entity to be given credit for the gift. Valid values are &quot;User&quot;, &quot;Account&quot;, or &quot;Contact&quot;.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>