unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Gift__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related gift. Required for all credits except credits associated with Non-Cash Gifts.</description>
    <inlineHelpText>Link to the related gift. Required for all credits except credits associated with Non-Cash Gifts.</inlineHelpText>
    <label>Gift</label>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipLabel>Gift Credits</relationshipLabel>
    <relationshipName>Gift_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>