unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Gift_Detail__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**Conditionally Required** Link to the related gift detail. Required for all credits except credits associated with Non-Cash Gifts.</description>
    <inlineHelpText>**Conditionally Required** Link to the related gift detail. Required for all credits except credits associated with Non-Cash Gifts.</inlineHelpText>
    <label>Gift Detail</label>
    <referenceTo>OrderApi__Receipt_Line__c</referenceTo>
    <relationshipLabel>Gift Credits</relationshipLabel>
    <relationshipName>Gift_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>