unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__Non_Cash_Gift__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Non_Cash_Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related non-cash gift for the gift credit. Gift credits require either a gift or a non-cash gift to be assigned prior to saving.</description>
    <inlineHelpText>The related non-cash gift for the gift credit. Gift credits require either a gift or a non-cash gift to be assigned prior to saving.</inlineHelpText>
    <label>Non-Cash Gift</label>
    <referenceTo>DonorApi__Gift_In_Kind__c</referenceTo>
    <relationshipLabel>Gift Credits</relationshipLabel>
    <relationshipName>Gift_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>