unpackaged/main/default/objects/DonorApi__Gift_Credit__c/fields/DonorApi__User__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relates the credit to user in the system. The user is typically the solicitor.</description>
    <inlineHelpText>Relates the credit to user in the system. The user is typically the solicitor.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Gift_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>